# max-router

./: .env.example  Anchor.toml  DEVNET_REAL_TIME_FIX_STATUS.md  DEX_AUDIT_REPORT.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  PDA_MIGRATION_GUIDE.md  QUICKSTART.md  README.md  REAL_TIME_DEVNET_AUDIT_REPORT.md  UPDATED_DEX_PROGRAM.rs  idl.json  index.html  package-lock.json  package.json  router.js  tsconfig.json  wrangler.toml
api-gateway/: wrangler.toml
api-gateway/functions/max/v1/: [[route]].ts
docs/: api.md
programs/max-router/: Cargo.toml
programs/max-router/src/: lib.rs
public/: index.html
src/: App.css  App.tsx  idl.json  index.css  index.tsx
src/client/components/: Header.css  Header.tsx  Security.css  Security.tsx  TokenDetails.css  TokenDetails.tsx
src/client/context/: AppContext.ts
src/client/lib/: anchorUtils.ts  maxDexClient.ts  solanaService.ts  transactionUtils.ts
src/client/lib/pages/: DeployTokenPage.tsx  LiquidityPoolsPage.tsx  MyTokensPage.css  MyTokensPage.tsx  Page.css  SwapRouterPage.tsx  TokenDetailsPage.tsx
src/lib/: idlManager.ts
tests/: max-router.ts
